# python-template

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
