[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "python_template" }
] # Rename this when the python_template folder is renamed

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
coverage = "^7.4.0"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
toml-cli = "^0.6.0"
radon = "^6.0.1"

[tool.ruff]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific

]
ignore = ["E501", "E731"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
