[tool.poetry]
name = "python-template"
version = "1.0.0"
description = ""
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "python_template" }
] # Rename this when the python_template folder is renamed

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
coverage = "^7.5.4"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
radon = "^6.0.1"
ruff = "^0.4.10"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
toml-cli = "^0.7.0"

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific

]
ignore = ["E501", "E731"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
